--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -83,8 +83,9 @@
         android:layout_width="203dp"
         android:layout_height="62dp"
         android:text="Settings"
-        android:textStyle="bold"
+        android:textAlignment="center"
         android:textSize="40dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.745"
