--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -65,12 +65,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/character_creator_page_one_view_character_demo"
+        android:id="@+id/character_creator_page_one_view_character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="440dp"
+        android:layout_marginTop="480dp"
         android:layout_marginEnd="20dp"
         android:text="Next Page"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/character_creator_page_one_roll_stats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="410dp"
+        android:layout_marginEnd="24dp"
+        android:text="Roll Stats"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -269,7 +279,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="1dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#00FFFFFF"
         android:padding="0dp"
         android:text="🔙"
         android:textAlignment="center"
