--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -32,7 +32,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/strength_card"
                 android:layout_width="70dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="80dp"
                 android:layout_marginTop="30dp"
                 app:cardBackgroundColor="#5E92FF"
@@ -58,30 +58,33 @@
 
                     <TextView
                         android:id="@+id/character_view_strength_value"
-                        android:layout_width="40dp"
-                        android:layout_height="30dp"
+                        android:layout_width="35dp"
+                        android:layout_height="40dp"
                         android:text="TextView"
                         android:textAlignment="center"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_strength_text" />
 
                     <TextView
                         android:id="@+id/character_view_strength_mod"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_strength_value"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_strength_text" />
 
                     <TextView
                         android:id="@+id/character_view_strength_save"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_strength_value"
                         app:layout_constraintStart_toEndOf="@+id/character_view_strength_value" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -91,7 +94,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/dexterity_card"
                 android:layout_width="70dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="170dp"
                 android:layout_marginTop="30dp"
                 app:cardBackgroundColor="#5E92FF"
@@ -117,30 +120,33 @@
 
                     <TextView
                         android:id="@+id/character_view_dexterity_value"
-                        android:layout_width="40dp"
-                        android:layout_height="30dp"
+                        android:layout_width="35dp"
+                        android:layout_height="40dp"
                         android:text="TextView"
                         android:textAlignment="center"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_dexterity_text" />
 
                     <TextView
                         android:id="@+id/character_view_dexterity_mod"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_dexterity_value"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_dexterity_text" />
 
                     <TextView
                         android:id="@+id/character_view_dexterity_save"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_dexterity_value"
                         app:layout_constraintStart_toEndOf="@+id/character_view_dexterity_value" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -150,7 +156,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/constitution_card"
                 android:layout_width="70dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="260dp"
                 android:layout_marginTop="30dp"
                 app:cardBackgroundColor="#5E92FF"
@@ -175,31 +181,34 @@
 
                     <TextView
                         android:id="@+id/character_view_constitution_value"
-                        android:layout_width="40dp"
-                        android:layout_height="30dp"
+                        android:layout_width="35dp"
+                        android:layout_height="40dp"
                         android:text="TextView"
                         android:textAlignment="center"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_constitution_text" />
 
                     <TextView
                         android:id="@+id/character_view_constitution_mod"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_constitution_value"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_constitution_text" />
 
 
                     <TextView
                         android:id="@+id/character_view_constitution_save"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_constitution_value"
                         app:layout_constraintStart_toEndOf="@+id/character_view_constitution_value" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -209,7 +218,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/intelligence_card"
                 android:layout_width="70dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="80dp"
                 android:layout_marginTop="110dp"
                 app:cardBackgroundColor="#5E92FF"
@@ -234,31 +243,34 @@
 
                     <TextView
                         android:id="@+id/character_view_intelligence_value"
-                        android:layout_width="40dp"
-                        android:layout_height="30dp"
+                        android:layout_width="35dp"
+                        android:layout_height="40dp"
                         android:text="TextView"
                         android:textAlignment="center"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_intelligence_text" />
 
                     <TextView
                         android:id="@+id/character_view_intelligence_mod"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_intelligence_value"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_intelligence_text" />
 
 
                     <TextView
                         android:id="@+id/character_view_intelligence_save"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_intelligence_value"
                         app:layout_constraintStart_toEndOf="@+id/character_view_intelligence_value" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -268,7 +280,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/wisdom_card"
                 android:layout_width="70dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="170dp"
                 android:layout_marginTop="110dp"
                 app:cardBackgroundColor="#5E92FF"
@@ -294,31 +306,34 @@
 
                     <TextView
                         android:id="@+id/character_view_wisdom_value"
-                        android:layout_width="40dp"
-                        android:layout_height="30dp"
+                        android:layout_width="35dp"
+                        android:layout_height="40dp"
                         android:text="TextView"
                         android:textAlignment="center"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_wisdom_text" />
 
                     <TextView
                         android:id="@+id/character_view_wisdom_mod"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_wisdom_value"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_wisdom_text" />
 
 
                     <TextView
                         android:id="@+id/character_view_wisdom_save"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_wisdom_value"
                         app:layout_constraintStart_toEndOf="@+id/character_view_wisdom_value" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -328,7 +343,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/charisma_card"
                 android:layout_width="70dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="260dp"
                 android:layout_marginTop="110dp"
                 app:cardBackgroundColor="#5E92FF"
@@ -354,31 +369,34 @@
 
                     <TextView
                         android:id="@+id/character_view_charisma_value"
-                        android:layout_width="40dp"
-                        android:layout_height="30dp"
+                        android:layout_width="35dp"
+                        android:layout_height="40dp"
                         android:text="TextView"
                         android:textAlignment="center"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_charisma_text" />
 
                     <TextView
                         android:id="@+id/character_view_charisma_mod"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_charisma_value"
                         app:layout_constraintTop_toBottomOf="@+id/character_view_charisma_text" />
 
 
                     <TextView
                         android:id="@+id/character_view_charisma_save"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="20dp"
+                        android:padding="0dp"
                         android:text="TextView"
                         android:textAlignment="center"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_charisma_value"
                         app:layout_constraintStart_toEndOf="@+id/character_view_charisma_value" />
 
@@ -418,20 +436,32 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/character_view_health_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:text="Health:"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
                 android:id="@+id/character_view_current_health"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="3dp"
                 android:text="TextView"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@id/character_view_health_text"
+                app:layout_constraintTop_toTopOf="@id/character_view_health_text" />
 
             <TextView
                 android:id="@+id/character_view_health_divider"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_current_health"
                 app:layout_constraintTop_toTopOf="@id/character_view_current_health" />
 
@@ -440,9 +470,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_health_divider"
                 app:layout_constraintTop_toTopOf="@id/character_view_health_divider" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -481,6 +513,19 @@
         android:text="Race"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/character_view_back_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="1dp"
+        android:backgroundTint="#00FFFFFF"
+        android:padding="0dp"
+        android:text="🔙"
+        android:textAlignment="center"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
