--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -28,8 +28,9 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="1"
+        android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -155,8 +156,9 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="8"
+        android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_spacer1"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_spacer1" />
@@ -166,8 +168,9 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="8"
+        android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_spacer1"
         app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_intelligence_display_text" />
@@ -178,8 +181,9 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="8"
+        android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_intelligence"
         app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_wisdom_display_text" />
@@ -190,8 +194,9 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="8"
+        android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_wisdom"
         app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_charisma_display_text" />
@@ -202,8 +207,9 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="8"
+        android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_strength"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_edit_strength" />
@@ -214,8 +220,9 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:ems="10"
-        android:inputType="number"
         android:hint="8"
+        android:inputType="number"
+        android:maxLength="2"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_dexterity"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_edit_dexterity" />
@@ -227,6 +234,7 @@
         android:ems="10"
         android:hint="10"
         android:inputType="text"
+        android:maxLength="3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/character_creator_page_one_spacer1" />
 
