--- a/app/src/main/res/layout/character_creator_page_one.xml
+++ b/app/src/main/res/layout/character_creator_page_one.xml
@@ -8,73 +8,71 @@
     tools:context=".CharacterCreatorPageOne"
     tools:ignore="LabelFor">
 
-    <Spinner
-        android:id="@+id/character_creator_page_one_edit_race"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="132dp"
-        android:entries="@array/Races"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/character_creator_page_one_edit_name"
-        android:layout_width="276dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
-        android:hint="@string/EditCharacterNameDefaultText"
         android:inputType="text"
+        android:hint="@string/EditCharacterNameDefaultText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="Autofill" />
-
-    <Spinner
-        android:id="@+id/character_creator_page_one_edit_class"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="48dp"
-        android:entries="@array/Classes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/character_creator_page_one_edit_level"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="52dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="30dp"
         android:ems="10"
-        android:hint="1"
         android:inputType="number"
+        android:hint="1"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="Autofill" />
 
     <Spinner
+        android:id="@+id/character_creator_page_one_edit_race"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="100dp"
+        android:entries="@array/Races"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
         android:id="@+id/character_creator_page_one_edit_subrace"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/character_creator_page_one_edit_class"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="30dp"
+        android:entries="@array/Classes"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/character_creator_page_one_view_character_demo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="440dp"
+        android:layout_marginEnd="20dp"
         android:text="Next Page"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.834" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/character_creator_page_one_strength_display_text"
@@ -139,7 +137,6 @@
         android:textAlignment="center"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="@+id/character_creator_page_one_edit_charisma"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/character_creator_page_one_edit_charisma"
         app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_spacer2" />
 
@@ -183,15 +180,11 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:ems="10"
-        android:hint="8"
         android:inputType="number"
+        android:hint="8"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/character_creator_page_one_edit_wisdom"
-        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_charisma_display_text"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@id/character_creator_page_one_charisma_display_text" />
 
     <EditText
         android:id="@+id/character_creator_page_one_edit_dexterity"
@@ -231,12 +224,10 @@
         android:id="@+id/character_creator_page_one_spacer1"
         android:layout_width="20dp"
         android:layout_height="160dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.419"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="240dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.528" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Space
         android:id="@+id/character_creator_page_one_spacer2"
@@ -265,22 +256,19 @@
 
     <Button
         android:id="@+id/character_creator_page_one_roll_health"
-        android:layout_width="93dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="108dp"
+        android:layout_width="75dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="5dp"
         android:padding="1dp"
         android:text="Roll Health"
         android:textSize="11sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/character_creator_page_one_minimum_health"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toEndOf="@id/character_creator_page_one_minimum_health"
+        app:layout_constraintTop_toTopOf="@id/character_creator_page_one_minimum_health" />
 
     <Button
         android:id="@+id/character_creator_page_one_back_button"
-        android:layout_width="118dp"
-        android:layout_height="68dp"
+        android:layout_width="45dp"
+        android:layout_height="50dp"
         android:layout_marginStart="1dp"
         android:backgroundTint="#00FFFFFF"
         android:padding="0dp"
