main menu color changes
Signed-off-by: Alexis <ambrizlex@gmail.com>

--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -17,7 +17,7 @@
             android:layout_width="343dp"
             android:layout_height="173dp"
             android:layout_marginTop="96dp"
-            android:backgroundTint="#FF0000"
+            android:backgroundTint="#D34141"
             android:text="Character⚔️"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
@@ -32,7 +32,7 @@
             android:layout_width="341dp"
             android:layout_height="167dp"
             android:layout_marginTop="492dp"
-            android:backgroundTint="#25681C"
+            android:backgroundTint="#3B812C"
             android:text="Information 📖"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
@@ -62,7 +62,7 @@
             android:id="@+id/main_menu_view_d_m_menu"
             android:layout_width="332dp"
             android:layout_height="183dp"
-            android:backgroundTint="#1541AF"
+            android:backgroundTint="#2B5297"
             android:text="Dungeon Master Menu 🎲"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
