--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7FA7FF"
+    android:background="#8193B4"
     tools:context=".CharacterView">
 
     <androidx.constraintlayout.widget.Barrier
@@ -51,8 +51,9 @@
                         android:text="Strength"
                         android:textAlignment="center"
                         android:textSize="14sp"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="@+id/character_view_strength_value"
-                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/character_view_strength_value"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,7 +61,7 @@
                         android:id="@+id/character_view_strength_value"
                         android:layout_width="35dp"
                         android:layout_height="40dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +72,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_strength_value"
@@ -79,10 +80,10 @@
 
                     <TextView
                         android:id="@+id/character_view_strength_save"
-                        android:layout_width="35dp"
-                        android:layout_height="20dp"
+                        android:layout_width="27dp"
+                        android:layout_height="15dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_strength_value"
@@ -113,6 +114,7 @@
                         android:text="Dexterity"
                         android:textAlignment="center"
                         android:textSize="14sp"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="@+id/character_view_dexterity_value"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="@+id/character_view_dexterity_value"
@@ -122,7 +124,7 @@
                         android:id="@+id/character_view_dexterity_value"
                         android:layout_width="35dp"
                         android:layout_height="40dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +135,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_dexterity_value"
@@ -144,7 +146,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_dexterity_value"
@@ -175,6 +177,7 @@
                         android:text="Constitution"
                         android:textAlignment="center"
                         android:textSize="13sp"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="@+id/character_view_constitution_value"
                         app:layout_constraintStart_toStartOf="@+id/character_view_constitution_value"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -183,7 +186,7 @@
                         android:id="@+id/character_view_constitution_value"
                         android:layout_width="35dp"
                         android:layout_height="40dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -194,7 +197,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_constitution_value"
@@ -206,7 +209,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_constitution_value"
@@ -237,6 +240,7 @@
                         android:text="Intelligence"
                         android:textAlignment="center"
                         android:textSize="13.5sp"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="@+id/character_view_intelligence_value"
                         app:layout_constraintStart_toStartOf="@+id/character_view_intelligence_value"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -245,7 +249,7 @@
                         android:id="@+id/character_view_intelligence_value"
                         android:layout_width="35dp"
                         android:layout_height="40dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -256,7 +260,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_intelligence_value"
@@ -268,7 +272,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_intelligence_value"
@@ -299,6 +303,7 @@
                         android:text="Wisdom"
                         android:textAlignment="center"
                         android:textSize="14sp"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="@+id/character_view_wisdom_value"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="@+id/character_view_wisdom_value"
@@ -308,7 +313,7 @@
                         android:id="@+id/character_view_wisdom_value"
                         android:layout_width="35dp"
                         android:layout_height="40dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -319,7 +324,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_wisdom_value"
@@ -331,7 +336,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_wisdom_value"
@@ -362,6 +367,7 @@
                         android:text="Charisma"
                         android:textAlignment="center"
                         android:textSize="14sp"
+                        android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="@+id/character_view_charisma_value"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="@+id/character_view_charisma_value"
@@ -371,7 +377,7 @@
                         android:id="@+id/character_view_charisma_value"
                         android:layout_width="35dp"
                         android:layout_height="40dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -382,7 +388,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintStart_toEndOf="@+id/character_view_charisma_value"
@@ -394,7 +400,7 @@
                         android:layout_width="35dp"
                         android:layout_height="20dp"
                         android:padding="0dp"
-                        android:text="TextView"
+                        android:text="✏️"
                         android:textAlignment="center"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="@+id/character_view_charisma_value"
@@ -428,7 +434,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="63dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/characterLevel" >
+        app:layout_constraintTop_toBottomOf="@+id/characterLevel">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/health_layout"
@@ -451,7 +457,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
-                android:text="TextView"
+                android:text="/"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_health_text"
                 app:layout_constraintTop_toTopOf="@id/character_view_health_text" />
@@ -469,7 +475,7 @@
                 android:id="@+id/character_view_max_health"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="/"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_health_divider"
                 app:layout_constraintTop_toTopOf="@id/character_view_health_divider" />
@@ -486,6 +492,7 @@
         android:layout_marginEnd="80dp"
         android:text="Name"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -499,6 +506,7 @@
         android:layout_marginEnd="80dp"
         android:text="Level"
         android:textSize="22sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -512,6 +520,7 @@
         android:layout_marginEnd="80dp"
         android:text="Race"
         android:textSize="22sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
